--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Generate snake
         uses: Platane/snk@v3
         with:
-          github_user_name: SnehaPandit-book
+          github_user_name: SnehaPandit   # ✅ USERNAME, not repo
           outputs: |
             output/snake.svg
             output/snake-dark.svg?palette=github-dark
